Fix skills layout issue in iOS

--- a/src/assets/styles/page.scss
+++ b/src/assets/styles/page.scss
@@ -49,10 +49,8 @@
   cursor: pointer;
   display: inline-block;
   font-size: 65%;
-  height: 100%;
-  margin: 3px;
   outline: none;
-  padding: 6px 12px;
+  padding: 12px 18px;
   text-transform: uppercase;
   transition: 0.4s color ease;
   white-space: nowrap;
